Fix failing annotator test and singletonMap => Map.of